--- a/main.html
+++ b/main.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table>
+	<thead>
+		<tr>
+			<th>Roll</th>
+			<th>Names</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>21</td>
+			<td>Raj</td>
+		</tr>
+		<tr>
+			<td>24</td>
+			<td>Ram</td>
+		</tr>
+		<tr>
+			<td>25</td>
+			<td>Radha</td>
+		</tr>
+	</tbody>
+</table>
+<h1>List of medias</h1>
+	<ol>
+		<li> <img src="https://picsum.photos/id/123/200/300" alt="image"> </li>
+		<li> <video width="200px" height="200px" type="video/mp4" controls> <source url="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
+		<li> <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"controls></audio></li>
+	</ol>
 </body>
-
-</html>
