--- a/main.html
+++ b/main.html
@@ -29,10 +29,11 @@
 		</tr>
 	</tbody>
 </table>
-<h1>List of medias</h1>
 	<ol>
 		<li> <img src="https://picsum.photos/id/123/200/300" alt="image"> </li>
-		<li> <video width="200px" height="200px" type="video/mp4" controls> <source url="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
+		<li> <video type="video/mp4" controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
 		<li> <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"controls></audio></li>
 	</ol>
 </body>
+
+</html>
