--- a/main.html
+++ b/main.html
@@ -39,10 +39,10 @@
 	<h1>List of medias</h1>
 			  <ol start="1">
 				  <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
-              <li><video controls="" loop="">
+              <li><video controls="" loop="" width=75px>
 				  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" >
 			  </video></li>
-              <li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+              <li><audio controls="" loop="" src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio"></audio></li>
 
 
             </ol>
