--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 	<h1>List of medias</h1>
 			  <ol start="1">
 				  <li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
-              <li><video controls="" loop="" width=75px>
+              <li><video controls="" loop="" >
 				  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" >
 			  </video></li>
               <li><audio controls="" loop="" src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio"></audio></li>
